# Udemy-Advanced-LangChain

./: 00_LCEL_Deepdive.ipynb  01_LCEL_And_Runnables.ipynb  03_IndexingAPI.ipynb  04_Ragas.ipynb  05_BetterChunking.ipynb  ai_models.py  hello.py  pyproject.toml
