[project]
name = "udemy-advanced-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipywidgets>=8.1.5",
    "langchain>=0.3.19",
    "langchain-openai>=0.3.7",
    "notebook>=7.3.2",
    "python-dotenv>=1.0.1",
]
